@@ -58,6 +58,8 @@ Operator catalog:
 -------------------------------------------------------------
    Selection
 -------------------------------------------------------------
+   Select        select          Select fields
+   Select        delete          Delete fields
    Selvar        selcode         Select variables by code number
    Selvar        delcode         Delete variables by code number
    Selvar        selname         Select variables by name
