@@ -10,6 +10,7 @@ Merge	      File operations
 Split	      File operations
 Splittime     File operations
 Splitsel      File operations
+Select        Selection
 Selvar        Selection
 Seltime       Selection
 Selbox        Selection
