@@ -8,8 +8,9 @@
 @Operators = copy cat
 
 @BeginDescription
-This module contains operators to copy or concatenate datasets. Each input
-dataset is required to have the same variables with complete time steps.
+This module contains operators to copy or concatenate datasets.
+@file{ifiles} is an unlimited number of input files. All input files need to have 
+the same structure with the same variables on different time steps.
 @EndDescription
 @EndModule
 
