@@ -11,8 +11,9 @@
 This module computes statistical values over an ensemble of input files.
 Depending on the chosen operator the minimum, maximum, sum, average, variance,
 standard deviation, a certain percentile over all input files or a skill score is written
-to @file{ofile}. The date information of a time step in @file{ofile} is
-the date of the first input file.
+to @file{ofile}.
+All input files need to have the same structure with the same variables.
+The date information of a time step in @file{ofile} is the date of the first input file.
 @EndDescription
 @EndModule
 
