@@ -32,6 +32,8 @@ fields and the same number of time steps.
 
 @BeginDescription
 Merges all time steps of all input files sorted by date and time.
+All input files need to have the same structure with the same variables 
+on different time steps.
 After this operation every input time step is in @file{ofile} and
 all time steps are sorted by date and time. Each input file is 
 required to have the same variables and different time steps.
