@@ -1,27 +1,0 @@
-@BeginModule
-@NewPage
-@Name      = Mergetime
-@Title     = Merge time
-@Section   = File operations
-@Class     = File operation
-@Arguments = ifiles ofile
-@Operators = mergetime
-@EndModule
-
-
-@BeginOperator_mergetime
-@Title     = Merge sorted by date and time
-
-@BeginDescription
-Merges all time steps of all input files sorted by date and time. After this 
-operation every input time step is in @file{ofile} and all time steps are sorted by 
-date and time. Each input file should have the same variables.
-@EndDescription
-@EndOperator
-
-
-@BeginExample
-@BeginVerbatim
-   cdo mergetime ifile1 ifile2 ifile3 ifile4 ofile
-@EndVerbatim
-@EndExample
