@@ -8,8 +8,10 @@
 @Operators = sinfo sinfov sinfop
 
 @BeginDescription
-This module writes information about the structure of all input datasets to 
-standard output. The information displayed depends on the chosen operator.
+This module writes information about the structure of @file{ifiles} to standard output.
+@file{ifiles} is an unlimited number of input files. All input files need to have 
+the same structure with the same variables on different time steps.
+The information displayed depends on the chosen operator.
 @EndDescription
 @EndModule
 
