@@ -9,8 +9,9 @@ static char *InfoHelp[] = {
     "",
     "DESCRIPTION",
     "    This module writes information about the structure and contents ",
-    "    of all input datasets to standard output. The information displayed ",
-    "    depends on the chosen operator.",
+    "    of all input files to standard output.  All input files need to have ",
+    "    the same structure with the same variables on different time steps.",
+    "    The information displayed depends on the chosen operator.",
     "",
     "OPERATORS",
     "    info   Dataset information listed by code number",
@@ -38,8 +39,10 @@ static char *SinfoHelp[] = {
     "    <operator>  ifiles",
     "",
     "DESCRIPTION",
-    "    This module writes information about the structure of all input datasets to ",
-    "    standard output. The information displayed depends on the chosen operator.",
+    "    This module writes information about the structure of ifiles to standard output.",
+    "    ifiles is an unlimited number of input files. All input files need to have ",
+    "    the same structure with the same variables on different time steps.",
+    "    The information displayed depends on the chosen operator.",
     "",
     "OPERATORS",
     "    sinfo   Short dataset information listed by code number",
@@ -184,8 +187,9 @@ static char *CopyHelp[] = {
     "    <operator>  ifiles ofile",
     "",
     "DESCRIPTION",
-    "    This module contains operators to copy or concatenate datasets. Each input",
-    "    dataset is required to have the same variables with complete time steps.",
+    "    This module contains operators to copy or concatenate datasets.",
+    "    ifiles is an unlimited number of input files. All input files need to have ",
+    "    the same structure with the same variables on different time steps.",
     "",
     "OPERATORS",
     "    copy  Copy datasets",
@@ -230,6 +234,8 @@ static char *MergeHelp[] = {
     "               fields and the same number of time steps.",
     "    mergetime  Merge datasets sorted by date and time",
     "               Merges all time steps of all input files sorted by date and time.",
+    "               All input files need to have the same structure with the same variables ",
+    "               on different time steps.",
     "               After this operation every input time step is in ofile and",
     "               all time steps are sorted by date and time. Each input file is ",
     "               required to have the same variables and different time steps.",
@@ -341,6 +347,30 @@ static char *SplitselHelp[] = {
     NULL
 };
 
+static char *SelectHelp[] = {
+    "NAME",
+    "    select, delete - Select fields",
+    "",
+    "SYNOPSIS",
+    "    <operator>,keys  ifiles ofile",
+    "",
+    "DESCRIPTION",
+    "    This module selects some fields from ifiles and writes them to ofile.",
+    "    ifiles is an unlimited number of input files. All input files need to have ",
+    "    the same structure with the same variables on different time steps.",
+    "    The fields selected depends on the chosen operator and the parameters.",
+    "",
+    "OPERATORS",
+    "    select  Select fields",
+    "            Selects all fields with keys in a user given list.",
+    "    delete  Delete fields",
+    "            Deletes all fields with keys in a user given list.",
+    "",
+    "PARAMETER",
+    "    keys  STRING  Comma separated list of keys",
+    NULL
+};
+
 static char *SelvarHelp[] = {
     "NAME",
     "    selcode, delcode, selname, delname, selstdname, sellevel, sellevidx, selgrid, ",
@@ -361,7 +391,7 @@ static char *SelvarHelp[] = {
     "",
     "DESCRIPTION",
     "    This module selects some fields from ifile and writes them to ofile.",
-    "    The fields selected depend on the chosen operator and the parameters.",
+    "    The fields selected depends on the chosen operator and the parameters.",
     "",
     "OPERATORS",
     "    selcode     Select variables by code number",
@@ -1325,8 +1355,9 @@ static char *EnsstatHelp[] = {
     "    This module computes statistical values over an ensemble of input files.",
     "    Depending on the chosen operator the minimum, maximum, sum, average, variance,",
     "    standard deviation, a certain percentile over all input files or a skill score is written",
-    "    to ofile. The date information of a time step in ofile is",
-    "    the date of the first input file.",
+    "    to ofile.",
+    "    All input files need to have the same structure with the same variables.",
+    "    The date information of a time step in ofile is the date of the first input file.",
     "",
     "OPERATORS",
     "    ensmin   Ensemble minimum",
@@ -3331,8 +3362,9 @@ static char *OutputHelp[] = {
     "",
     "DESCRIPTION",
     "    This module prints all values of all input datasets to standard output.",
-    "    All input fields need to have the same horizontal grid. The format of the ",
-    "    output depends on the chosen operator.",
+    "    All input fields need to have the same horizontal grid. All input files ",
+    "    need to have the same structure with the same variables on different ",
+    "    time steps. The format of the output depends on the chosen operator.",
     "",
     "OPERATORS",
     "    output     ASCII output",
